merge terminal-engineering-guide into tools-guide
Consolidate two overlapping docs into a single CLI 도구 & 패턴 가이드.
Adds vim keymap, JVM diagnostics, shell scripting patterns, I/O
redirection, kubectl/helm/eksctl, deeper aws/redis/kafka/docker
recipes, and codebase exploration strategy. Also documents the
recently-added Brewfile entries (intellij-idea, claude-code, slack,
google-chrome, wireshark-app).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>